--- a/lekcja6 okno dialogowe/rysowanie prostokąta.html
+++ b/lekcja6 okno dialogowe/rysowanie prostokąta.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 	<head>
-		<title>Dialog</title>
+		<title>dialog</title>
 		<meta charset="utf-8">
 	</head>
 	<body>
 		<script type="text/javascript">
- 		var szerokosc = parseInt(prompt("Podaj Szerokość Prostokąta", ""));
- 		var wysokosc = parseInt(prompt("Podaj Wyskość Prostokąta", "",));
- 			document.write("Wybrałeś Szerokość: "+szerokosc+"<br>");
- 			document.write("Wybrałeś Wyskość Prostokąta: "+wysokosc);
+ 		var szerokosc = parseInt(prompt("Podaj Szerokość prostokąta ", ""));
+ 		var wysokosc = parseInt(prompt("Podaj Wyskość prostokąta ", "",));
+ 			document.write("Szerokość prostokąta: "+szerokosc+"<br>");
+ 			document.write("Wyskość prostokąta: "+wysokosc);
  	document.write("<br>")
  	for(a = 1; a <=wysokosc; ++a)
  	{
